<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_update"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/new_version"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ProgressBar
                android:id="@+id/pb_update_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">

                <TextView
                    android:id="@+id/tv_update_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="0%" />

                <TextView
                    android:id="@+id/tv_downFileLength"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_toLeftOf="@+id/separator"
                    android:text="@string/zero" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/tv_fileLength"
                    android:text="@string/separator" />

                <TextView
                    android:id="@+id/tv_fileLength"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/zero" />
            </RelativeLayout>

        </LinearLayout>

        <com.xycode.xylibrary.uiKit.views.XScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:maxHeight="360dp"
            android:scrollbars="none">

            <TextView
                android:id="@+id/tv_illustration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:minHeight="60dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="" />
        </com.xycode.xylibrary.uiKit.views.XScrollView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:weightSum="3.5">

        <TextView
            android:id="@+id/tvIgnore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_item_white"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/ignoreThisVersion"
            android:visibility="visible" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_item_white"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/text_update_next_time"
            android:visibility="visible" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_item_white"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/update_now" />

    </LinearLayout>
</LinearLayout>